Add existing file

--- a/mytrains/frontend/src/components/layout/MainNavigation.module.css
+++ b/mytrains/frontend/src/components/layout/MainNavigation.module.css
@@ -4,13 +4,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #77002e;
+  background-color: #efefef;
   padding: 0 10%;
 }
 
 .logo {
   font-size: 2rem;
-  color: white;
+  color: rgb(192, 192, 192)9;
   font-weight: bold;
 }
 
@@ -29,13 +29,13 @@
 .header a {
   text-decoration: none;
   font-size: 1.5rem;
-  color: #fcb8d2;
+  color: rgb(192, 192, 192);
 }
 
 .header a:hover,
 .header a:active,
 .header a.active {
-  color: white;
+  color: rgb(146, 146, 146) ;
 }
 
 .badge {
